--- a/app/views/parts/campaignedit.scala.html
+++ b/app/views/parts/campaignedit.scala.html
@@ -219,7 +219,9 @@
 										<form class="form" role="form">
 											<div class="form-group">
 												<label for="audiencereach">Audience Reach</label>
-												<input type="text" class="form-control" id="audiencereach" placeholder="">
+												<div class="slider">
+													<input id="audiencereach" type="text" class="form-control" value="" data-slider-min="0" data-slider-max="100" data-slider-step="1" data-slider-value="50" data-slider-orientation="vertical" data-slider-selection="after"data-slider-tooltip="hide" />
+												</div>
 											</div>
 											<div class="form-group">
 												<label for="adimpressiongoal">AD Impression Goal</label>
