--- a/app/views/parts/campaignedit.scala.html
+++ b/app/views/parts/campaignedit.scala.html
@@ -7,19 +7,15 @@
 				<h4 class="modal-title">New/Edit Campaign</h4>
 			</div>
 			<div class="modal-body">
+				<h3 class="m-null-top m-btm">Campaign Name: <a href="#" id="campaignename" data-bind="editable: currentcampaign().name" data-type="text" data-pk="1" data-title="Enter Campaign Name">New Campaign</a></h3>
 				<div class="wizard" id="MyWizard">
 					<ul class="steps">
 						<li class="complete" data-target="#step1"><span class="badge badge-info">1</span>Step 1<span class="chevron"></span></li>
 						<li class="active" data-target="#step2"><span class="badge">2</span>Step 2<span class="chevron"></span></li>
 						<li data-target="#step3"><span class="badge">3</span>Step 3<span class="chevron"></span></li>
 					</ul>
-					<div class="actions">
-						<button class="btn btn-default btn-xs" type="button"><span class="glyphicon glyphicon-arrow-left"></span> Prev</button>
-						<button data-last="Finish" class="btn btn-default btn-xs" type="button">Next <span class="glyphicon glyphicon-arrow-right"></span></button>
-					</div>
 				</div>
 				<div class="step-content">
-					<h3>Campaign Name: <a href="#" id="campaignename" data-bind="editable: currentcampaign().name" data-type="text" data-pk="1" data-title="Enter Campaign Name">New Campaign</a></h3>
 					<div id="step1" class="step-pane active">
 						<h3>Select Audience</h3>
 						<div class="box-strips">
@@ -242,6 +238,10 @@
 					<div id="step3" class="step-pane">
 						This is step 3
 					</div>
+				</div>
+				<div class="actions text-right m-top">
+					<button id="btnWizardPrev" class="btn btn-default" type="button"><span class="glyphicon glyphicon-arrow-left"></span> Prev</button>
+					<button id="btnWizardNext" class="btn btn-default" type="button" data-last="Finish">Next <span class="glyphicon glyphicon-arrow-right"></span></button>
 				</div>
 			</div>
 			<div class="modal-footer">
