--- a/app/views/dashboardcampaign.scala.html
+++ b/app/views/dashboardcampaign.scala.html
@@ -1,8 +1,8 @@
 @(publishers: Seq[Publisher], current: Admin)
 @templates.main("Dashboard") {
 @menu.admin("Dashboard")
-@menu.logout(current)
-<script type="text/javascript" data-main="@routes.Assets.at("javascripts/dashboard.campaign.js")" src="@routes.WebJarAssets.requirejs"></script>
+@menu.logout(current, menu.publishers(publishers))
+@helper.requireJs(core = routes.WebJarAssets.requirejs.url, module = routes.Assets.at("javascripts/dashboard.campaign.js").url, productionFolderPrefix = "")
 <script type="text/javascript">
 //<![CDATA[
 window.data = {};
@@ -24,17 +24,17 @@ window.data.publishers = @{import play.api.libs.json._;import controllers.Publis
 			<div class="row legends">
 				<div class="col-sm-4">
 					<div class="legend-revenu">
-						<span></span> $<span data-bind="text: chartdata.sumrevenue"></span> Revenue
+						<span></span> $<span data-bind="text: campaignchart.sumrevenue"></span> Revenue
 					</div>
 				</div>
 				<div class="col-sm-4">
 					<div class="legend-ad-spent">
-						<span></span> $<span data-bind="text: chartdata.sumadspend"></span> Ad spend
+						<span></span> $<span data-bind="text: campaignchart.sumadspend"></span> Ad spend
 					</div>
 				</div>
 				<div class="col-sm-4">
 					<div class="legend-profit">
-						<span></span> $<span data-bind="text: chartdata.sumprofit"></span> Profit
+						<span></span> $<span data-bind="text: campaignchart.sumprofit"></span> Profit
 					</div>
 				</div>
 			</div>
@@ -44,21 +44,21 @@ window.data.publishers = @{import play.api.libs.json._;import controllers.Publis
 						<div class="form-group well-fix">
 							<label for="selectDate" class="col-sm-2 control-label">Dates</label>
 							<div class="col-sm-10">
-								<select class="form-control" data-bind="options: chartdaterange.availableDateRanges, value: chartdaterange.dateRange" id="selectDate">
+								<select class="form-control" data-bind="options: campaignchartdaterange.availableDateRanges, value: campaignchartdaterange.dateRange" id="selectDate">
 								</select>
 							</div>
 						</div>
 					</form>
 				</div>
 				<div class="col-sm-8">
-					<div class="well well-sm m-null input-daterange">
+					<div data-bind="datepicker: campaignchartdaterange, datepickerOptions: { calendarWeeks: true, autoclose: true, todayHighlight: true }" class="well well-sm m-null input-daterange">
 						<div class="row">
 							<div class="col-sm-6">
 								<form class="form-horizontal" role="form">
 									<div class="form-group m-null">
 										<label for="selectDateFrom" class="col-sm-2 control-label">From</label>
 										<div class="col-sm-10">
-											<input class="form-control date-picker" data-bind="value: chartdaterange.formattedStartDate" id="selectDateFrom" name="start"/>
+											<input class="form-control date-picker" id="selectDateFrom" name="start"/>
 										</div>
 									</div>
 								</form>
@@ -68,7 +68,7 @@ window.data.publishers = @{import play.api.libs.json._;import controllers.Publis
 									<div class="form-group m-null">
 										<label for="selectDateTo" class="col-sm-2 control-label">To</label>
 										<div class="col-sm-10">
-											<input class="form-control date-picker" data-bind="value: chartdaterange.formattedEndDate" id="selectDateTo" name="end"/>
+											<input class="form-control date-picker" id="selectDateTo" name="end"/>
 										</div>
 									</div>
 								</form>
@@ -79,7 +79,7 @@ window.data.publishers = @{import play.api.libs.json._;import controllers.Publis
 			</div>
 			<div class="row">
 				<div class="col-md-12">
-					<div id="chart" class="dashboard">
+          <div class="dashboard" data-bind="nvddd: campaignchart.chartcontent, nvdddOptions: {chartType: 'cumulativeline',yFormat: 'currency'}">
 						<svg></svg>
 					</div>
 				</div>
@@ -100,27 +100,27 @@ window.data.publishers = @{import play.api.libs.json._;import controllers.Publis
 			<div class="col-md-9">
 				<div class="row">
 					<div class="col-xs-6">
-						<select class="form-control m-btm" data-bind="options: datatablesearchbar.availableCategories, value: datatablesearchbar.category">
+						<select class="form-control m-btm" data-bind="options: campaigntablesearchbar.availableCategories, value: campaigntablesearchbar.category">
 						</select>
 					</div>
 					<div class="col-xs-6">
 						<form role="search">
 							<div class="input-group m-btm">
-								<input type="text" data-bind="value: datatablesearchbar.query" placeholder="Search ..." class="form-control">
+								<input type="text" data-bind="value: campaigntablesearchbar.query" placeholder="Search ..." class="form-control">
 								<span class="input-group-btn">
-									<button class="btn btn-primary" data-bind="click: datatablesearchbar.search" type="button">Search</button>
+									<button class="btn btn-primary" data-bind="click: campaigntablesearchbar.search" type="button">Search</button>
 								</span>
 							</div>
 						</form>
 					</div>
 				</div>
 				<div class="row">
-					@elements.pagination("datatablescroller")
+					@elements.pagination("campaigntablescroller")
 				</div>
 				<div class="row">
 					<div class="col-md-12">
 						<div class="table-responsive">
-							<table class="table table-striped table-bordered data-table">
+							<table class="table table-striped table-bordered data-table" data-bind="datatable: campaigntable, datatableScroller: campaigntablescroller, datatableOptions: { aoColumns: [ { sType: 'string' }, { sType: 'percent' }, { sType: 'currency' }, { sType: 'currency' }, { sType: 'date' }, { sType: 'date' } ] }">
 								<thead>
 									<tr>
 										<th class="sorting">Name</th>
@@ -138,7 +138,7 @@ window.data.publishers = @{import play.api.libs.json._;import controllers.Publis
 					</div>
 				</div>
 				<div class="row">
-					@elements.pagination("datatablescroller")
+					@elements.pagination("campaigntablescroller")
 				</div>
 			</div>
 			<div class="col-md-3">
