--- a/app/views/parts/campaignedit.scala.html
+++ b/app/views/parts/campaignedit.scala.html
@@ -231,6 +231,68 @@
 
 						<h3 class="clearfix">Expected Campaign Results: <span class="pull-right"><span class="legend-revenu">$5000 Revenue</span> - <span class="legend-ad-spent">$1700 AD Spent</span> = <span class="legend-profit">$3300 Profit</span></span></h3>
 
+						<div class="box-drag-and-drop-banner text-center">
+							<h3>Drag and Drop Banner Here</h3>
+							<div><img src="@routes.Assets.at("images/banner-examples.png")" alt="" /></div>
+							<p>You can drag multiple images here. We don't accept folders or compressed (zip) items.</p>
+						</div>
+						<div class="actions text-center m-top">
+							<button class="btn btn-primary" type="button">...or choose files</button>
+						</div>
+
+						<h3>Your Uploads</h3>
+						<div class="row">
+							<div class="col-md-12">
+								<table class="table table-striped table-bordered table-vertical">
+									<tbody>
+										<tr>
+											<td class="col-sm-2 col-xs-4"><img src="@routes.Assets.at("images/tmp-banner-your-uploads.png")" alt="" /></td>
+											<td class="col-sm-10 col-xs-8">
+												<div class="row">
+													<div class="col-xs-12 col-sm-9">
+														/myimages/banner_1.gif
+													</div>
+													<div class="col-xs-12 col-sm-3 text-right">
+														<button class="btn btn-danger btn-xs" type="button"><span class="glyphicon glyphicon-remove"></span> Delete</button>
+													</div>
+												</div>
+											</td>
+										</tr>
+										<!--
+										<tr>
+											<td class="col-lg-2 col-md-3 col-sm-4"><img src="@routes.Assets.at("images/tmp-banner-your-uploads.png")" alt="" /></td>
+											<td class="col-lg-10 col-md-9 col-sm-8">
+												<div class="row">
+													<div class="col-sm-9">
+														/myimages/banner_1.gif
+													</div>
+													<div class="col-sm-3 text-right">
+														<button class="btn btn-danger btn-xs" type="button"><span class="glyphicon glyphicon-remove"></span> Delete</button>
+													</div>
+												</div>
+											</td>
+										</tr>
+										<tr>
+											<td class="col-lg-2 col-md-3 col-sm-4"><img src="@routes.Assets.at("images/tmp-banner-your-uploads.png")" alt="" /></td>
+											<td class="col-lg-10 col-md-9 col-sm-8">
+												<div class="row">
+													<div class="col-sm-9">
+														/myimages/banner_1.gif
+													</div>
+													<div class="col-sm-3 text-right">
+														<button class="btn btn-danger btn-xs" type="button"><span class="glyphicon glyphicon-remove"></span> Delete</button>
+													</div>
+												</div>
+											</td>
+										</tr>
+										-->
+									</tbody>
+								</table>
+							</div>
+						</div>
+
+						<h3>Schedule Campaign</h3>
+						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam accumsan placerat augue vel semper. Donec eu tortor sit amet lectus malesuada mattis eu at leo. Curabitur aliquam eros nisi, non sollicitudin diam convallis vitae. Sed laoreet felis ac sem rutrum dapibus. Integer mollis placerat diam, eu lacinia nisi sagittis in. Phasellus nibh ipsum, accumsan eu magna ut, pretium pellentesque quam. Cras accumsan eget dui a blandit. Donec eget urna mattis, interdum leo sit amet, facilisis tortor. Ut varius cursus euismod. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Morbi interdum mollis dui et tempor.</p>
 					</div>
 					<div id="step2" class="step-pane">
 						This is step 2
