--- a/app/views/parts/campaignedit.scala.html
+++ b/app/views/parts/campaignedit.scala.html
@@ -10,8 +10,8 @@
 				<h3 class="m-null-top m-btm">Campaign Name: <a href="#" id="campaignename" data-bind="editable: currentcampaign().name" data-type="text" data-pk="1" data-title="Enter Campaign Name">New Campaign</a></h3>
 				<div class="wizard" id="MyWizard">
 					<ul class="steps">
-						<li class="complete" data-target="#step1"><span class="badge badge-info">1</span>Step 1<span class="chevron"></span></li>
-						<li class="active" data-target="#step2"><span class="badge">2</span>Step 2<span class="chevron"></span></li>
+						<li class="complete" data-target="#step1"><span class="badge badge-info">1</span>Step 1 (completed)<span class="chevron"></span></li>
+						<li class="active" data-target="#step2"><span class="badge">2</span>Step 2 (active)<span class="chevron"></span></li>
 						<li data-target="#step3"><span class="badge">3</span>Step 3<span class="chevron"></span></li>
 					</ul>
 				</div>
@@ -231,6 +231,7 @@
 
 						<h3 class="clearfix">Expected Campaign Results: <span class="pull-right"><span class="legend-revenu">$5000 Revenue</span> - <span class="legend-ad-spent">$1700 AD Spent</span> = <span class="legend-profit">$3300 Profit</span></span></h3>
 
+						<!-- STEP 2 -->
 						<div class="box-drag-and-drop-banner text-center">
 							<h3>Drag and Drop Banner Here</h3>
 							<div><img src="@routes.Assets.at("images/banner-examples.png")" alt="" /></div>
@@ -240,6 +241,7 @@
 							<button class="btn btn-primary" type="button">...or choose files</button>
 						</div>
 
+						<!-- STEP 3 -->
 						<h3>Your Uploads</h3>
 						<div class="row">
 							<div class="col-md-12">
@@ -258,34 +260,32 @@
 												</div>
 											</td>
 										</tr>
-										<!--
 										<tr>
-											<td class="col-lg-2 col-md-3 col-sm-4"><img src="@routes.Assets.at("images/tmp-banner-your-uploads.png")" alt="" /></td>
-											<td class="col-lg-10 col-md-9 col-sm-8">
+											<td class="col-sm-2 col-xs-4"><img src="@routes.Assets.at("images/tmp-banner-your-uploads.png")" alt="" /></td>
+											<td class="col-sm-10 col-xs-8">
 												<div class="row">
-													<div class="col-sm-9">
+													<div class="col-xs-12 col-sm-9">
 														/myimages/banner_1.gif
 													</div>
-													<div class="col-sm-3 text-right">
+													<div class="col-xs-12 col-sm-3 text-right">
 														<button class="btn btn-danger btn-xs" type="button"><span class="glyphicon glyphicon-remove"></span> Delete</button>
 													</div>
 												</div>
 											</td>
 										</tr>
 										<tr>
-											<td class="col-lg-2 col-md-3 col-sm-4"><img src="@routes.Assets.at("images/tmp-banner-your-uploads.png")" alt="" /></td>
-											<td class="col-lg-10 col-md-9 col-sm-8">
+											<td class="col-sm-2 col-xs-4"><img src="@routes.Assets.at("images/tmp-banner-your-uploads.png")" alt="" /></td>
+											<td class="col-sm-10 col-xs-8">
 												<div class="row">
-													<div class="col-sm-9">
+													<div class="col-xs-12 col-sm-9">
 														/myimages/banner_1.gif
 													</div>
-													<div class="col-sm-3 text-right">
+													<div class="col-xs-12 col-sm-3 text-right">
 														<button class="btn btn-danger btn-xs" type="button"><span class="glyphicon glyphicon-remove"></span> Delete</button>
 													</div>
 												</div>
 											</td>
 										</tr>
-										-->
 									</tbody>
 								</table>
 							</div>
