--- a/app/assets/stylesheets/bootstrap-theme.less
+++ b/app/assets/stylesheets/bootstrap-theme.less
@@ -6,7 +6,21 @@
  * Designed and built with all the love in the world by @mdo and @fat.
  */
 
+//less
+@font1:'Titillium Web',sans-serif;
+@font2:'Open Sans',sans-serif;
+@font3:'Oswald',sans-serif;
+
 @color-blue:#275980;
+@color-red:#bf0c0c;
+@color-yellow:#f3b300;
+@color-green:#81c53e;
+
+.rounded-corners (@radius:5px) {
+	border-radius:@radius;
+	-webkit-border-radius:@radius;
+	-moz-border-radius:@radius;
+}
 
 @btn-default-color:#fff;
 @btn-default-bg:#afab98;
