--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -125,13 +125,13 @@
 				<div class="form-group">
 					<label for="name" class="col-sm-2 control-label">Name</label>
 					<div class="col-sm-10">
-						<input type="text" autofocus="" placeholder="Name" class="form-control" id="name" name="name" value="">
+						<input type="text" placeholder="Name" class="form-control" id="name" name="name" value="">
 					</div>
 				</div>
 				<div class="form-group">
 					<label for="email" class="col-sm-2 control-label">Email</label>
 					<div class="col-sm-10">
-						<input type="email" autofocus="" required="" placeholder="Email" class="form-control" id="email" name="email" value="">
+						<input type="email" required="" placeholder="Email" class="form-control" id="email" name="email" value="">
 					</div>
 				</div>
 				<div class="form-group">
