--- a/app/assets/stylesheets/main.less
+++ b/app/assets/stylesheets/main.less
@@ -9,7 +9,7 @@
 
 //fixed-navbar
 body {
-	padding-top:50px;
+	padding-top:51px;
 }
 
 //login
@@ -465,16 +465,26 @@ th {
 	background-repeat:no-repeat;
 	background-size:cover;
 	color:#fff;
-	height:300px;
-	padding:50px 0;
+	min-height:340px;
+	text-shadow:0 0 2px #000;
 	h1 {
 		font-size:40px;
 		font-family:@font3;
-		margin-bottom:20px;
+		margin:60px 0;
 		text-transform:uppercase;
 	}
 	p {
 		font-weight:bold;
+		padding-bottom:20px;
+	}
+	.head-img {
+		position:relative;
+		height:340px;
+		img {
+			position:absolute;
+			bottom:0;
+			right:20px;
+		}
 	}
 }
 .slides > li {
@@ -489,6 +499,10 @@ th {
 	}
 	h3 {
 		font-size:18px;
+	}
+	.border-btm {
+		border-bottom:1px dashed #dfdfdf;
+		padding-bottom:20px;
 	}
 }
 .scroll-buttons {
