--- a/app/views/dashboardaudience.scala.html
+++ b/app/views/dashboardaudience.scala.html
@@ -124,7 +124,7 @@ window.data.publishers = @{import play.api.libs.json._;import controllers.Publis
 			</div>
 			<div class="col-md-3">
 				<p>
-					<button type="button" class="btn btn-default btn-lg btn-block btn-plus" data-bind="click: newaudience" data-toggle="modal" data-target="#editAudience"><span></span><span class="glyphicon glyphicon-plus-sign"></span> New Audience</button>
+					<button type="button" class="btn btn-default btn-lg btn-block btn-plus" data-bind="click: newaudience"><span></span><span class="glyphicon glyphicon-plus-sign"></span> New Audience</button>
 				</p>
 				<p>
 					<button type="button" class="btn btn-default btn-lg btn-block btn-plus"><span></span><span class="glyphicon glyphicon-plus-sign"></span> Yield Maximiser</button>
