CSS changed für carousel

--- a/app/assets/stylesheets/main.less
+++ b/app/assets/stylesheets/main.less
@@ -344,6 +344,9 @@ h3 {
 	background:rgba(255, 255, 255, 0.5);
 	border:1px solid #eee;
 	margin:10px;
+	&.simple {
+		margin:10px 20px;
+	}
 }
 .website-block-add-wrapper {
 	float:right;
