--- a/app/views/parts/audienceedit.scala.html
+++ b/app/views/parts/audienceedit.scala.html
@@ -20,7 +20,7 @@
 				<h3 class="m-null-top">Select Website</h3>
 				<div class="box-strips">
 					<div class="clearfix">
-						<div class="website-block-wrapper">
+						<div class="website-block-wrapper simple">
 							<div class="website-block-add-wrapper">
 								<a href="javascript:void()" class="website-block-add" data-bind="click: newwebsite">
 									<span class="website-name">Add New Website</span>
