inactive css for arrow added

--- a/app/assets/stylesheets/main.less
+++ b/app/assets/stylesheets/main.less
@@ -409,6 +409,10 @@ h3 {
 		color:#fff;
 		text-decoration:none;
 	}
+	&.inactive {
+		background:@btn-default-bg;
+		cursor:default;
+	}
 }
 
 .header {
