use html sorting

--- a/app/views/dashboardaudience.scala.html
+++ b/app/views/dashboardaudience.scala.html
@@ -103,7 +103,7 @@ window.data.publishers = @{import play.api.libs.json._;import controllers.Publis
 				<div class="row">
 					<div class="col-md-12">
 						<div class="table-responsive">
-							<table class="table table-striped table-bordered data-table" data-bind="datatable: audiencetable, datatableScroller: audiencetablescroller, datatableOptions: { aoColumns: [ { sType: 'string' }, { sType: 'percent' }, { sType: 'number' }, { sType: 'number' } ] }">
+							<table class="table table-striped table-bordered data-table" data-bind="datatable: audiencetable, datatableScroller: audiencetablescroller, datatableOptions: { aoColumns: [ { sType: 'string' }, { sType: 'html' }, { sType: 'number' }, { sType: 'number' } ] }">
 								<thead>
 									<tr>
 										<th class="sorting">Name</th>
