--- a/app/views/parts/audienceedit.scala.html
+++ b/app/views/parts/audienceedit.scala.html
@@ -53,10 +53,12 @@
 				</div>
 
 				<div class="m-top-btm" data-bind="visible: confirmwebsitedelete()==1">
-					<div class="alert alert-danger"><span class="glyphicon glyphicon-warning-sign"></span> Are you sure to delete the website: <span data-bind="text: currentwebsite().name"></span></div>
-					<div class="m-top-btm">
-						<button type="button" class="btn btn-default" data-bind="click: cleardeletewebsite">Cancel</button>
-						<button type="button" class="btn btn-danger" data-bind="click: deletewebsite"><span class="glyphicon glyphicon-remove"></span> Delete</button>
+					<div class="alert alert-danger">
+						<span class="glyphicon glyphicon-warning-sign"></span> Are you sure to delete the website <strong><span data-bind="text: currentwebsite().name"></span></strong>?
+						<div class="m-top">
+							<button type="button" class="btn btn-default" data-bind="click: cleardeletewebsite">Cancel</button>
+							<button type="button" class="btn btn-danger" data-bind="click: deletewebsite"><span class="glyphicon glyphicon-remove"></span> Delete</button>
+						</div>
 					</div>
 				</div>
 
